# ai-swim-coach

./: .dockerignore  .gitignore  CLAUDE.md  CONVERSATION_SUMMARY.md  DEPLOYMENT.md  Dockerfile  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  LINKEDIN_POST.md  MEDIUM_ARTICLE.md  MEDIUM_ARTICLE_PART2.md  R2_STORAGE_EXPLAINED.md  RAG_SWIMMING_KNOWLEDGE.md  RATE_LIMITING_NOTES.md  README.md  TECHNICAL_REVIEW_PREP.md  env.template  fly.toml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
frontend/: .env.production  .gitignore  README.md  env.example  env.production  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: SessionHistory.jsx
scripts/: import_knowledge.py  setup_snowflake.sql
src/: __init__.py  main.py
src/api/: __init__.py  dependencies.py  sweeper.py
src/api/middleware/: __init__.py
src/api/routes/: __init__.py  analysis.py  health.py  sessions.py  users.py  video.py  video_analysis.py
src/config/: __init__.py  settings.py
src/core/: __init__.py
src/core/analysis/: __init__.py  agentic_coach.py  coach.py  frames.py  models.py
src/infrastructure/: __init__.py
src/infrastructure/anthropic/: __init__.py  client.py
src/infrastructure/snowflake/: __init__.py  client.py
src/infrastructure/snowflake/repositories/: __init__.py  knowledge.py  sessions.py  usage_limits.py
src/infrastructure/storage/: __init__.py  client.py
src/infrastructure/video/: __init__.py  processor.py
tests/: __init__.py
tests/integration/: __init__.py  test_api.py
tests/unit/: __init__.py  test_models.py  test_video_processor.py
workers/keep-warm/: wrangler.toml
workers/keep-warm/src/: index.js
